grammar.js
    file: ($) => repeat($._toplevel_statement),

    _toplevel_statement: ($) => choice($.statement, $.clause),

    // =================================================================
    // Literals
    // =================================================================

    integer_literal: (_) => token(seq(DIGITS)),

    float_literal: (_) =>
      token(
        choice(
          seq(DECIMAL_DIGITS, ".", DECIMAL_DIGITS, optional(/[fFdD]/)),
          seq(".", DECIMAL_DIGITS, optional(/[fFdD]/)),
        ),
      ),

    true: (_) => "true",
    character_literal: (_) =>
      token(seq("'", choice(/[^\\'\n]/, /\\./, /\\\n/), "'")),

    _string_literal: ($) =>
      choice($.string_literal, $.interpolated_string_literal),

    string_literal: ($) =>
      seq('"', repeat(choice($.string_fragment, $.escape_sequence)), '"'),

    string_fragment: (_) => token.immediate(prec(1, /[^"\\{}]+/)),

    binary_expression: ($) =>
      choice(
        ...[
          ["or", PREC.OR],
          ["and", PREC.AND],
          ["!=", PREC.EQUALITY],
          ["==", PREC.EQUALITY],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          [">", PREC.REL],
          ["<", PREC.REL],
          ["-", PREC.ADD],
          ["+", PREC.ADD],
          ["/", PREC.MULT],
          ["*", PREC.MULT],
          ["%", PREC.MULT],
          ["**", PREC.POW],
          ["??", PREC.DEFAULT_OP],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      choice(
        ...[
          ["+", PREC.UNARY],
          ["-", PREC.UNARY],
          ["not", PREC.UNARY],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              // @ts-ignore
              field("operator", operator),
              field("operand", $.expression),
            ),
          ),
        ),
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("name", choice($.expression)),
          field("arguments", $.argument_list),
        ),
      ),

    block: ($) => seq(repeat($.statement), $._dedent),

    // =================================================================
    // Clauses
    // =================================================================

    clause: ($) => choice($.use_clause),

    use_clause: ($) => seq("use", choice($._name, $._string_literal)),

    // =================================================================
    // Statements
    // =================================================================

    expression_statement: ($) => seq($.expression, ";"),

    variable_declaration: ($) =>
      seq(
        optional("mut"),
        field(
          "declarator",
          choice($.typed_variable_declarator, $.inferred_variable_declarator),
        ),
      ),

    typed_variable_declarator: ($) =>
      seq(
        field("type", $._unannotated_type),
        $._variable_declarator_id,
        optional(seq("=", field("value", $._variable_initializer))),
      ),

    _variable_declarator_id: ($) =>
      field("name", choice($.identifier, $.default_val)),

    _variable_initializer: ($) => $.expression,

    test_declaration: ($) =>
      seq(
        optional($.annotation),
        "test",
        field("name", $._string_literal),
        ":",
        field("body", $._suite),
      ),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),
    integral_type: ($) =>
      choice(
        "bool8",
        "u8",
        "u8x2",
        "u8x3",
        "u8x4",
        "u8x8",
        "u32",
        "u32x2",
        "u32x3",
        "u32x4",
        "u32x8",
        "u64",
        "u64x2",
        "u64x3",
        "u64x4",
        "i32",
        "i64",
        "i32x2",
        "i32x3",
        "i32x4",
        "i32x8",
        "i64x2",
        "i64x3",
        "i64x4",
      ),

    floating_point_type: ($) =>
      choice(
        "f32",
        "f32x2",
        "f32x3",
        "f32x4",
        "f32x8",
        "f64",
        "f64x2",
        "f64x3",
        "f64x4",
      ),

    str_type: (_) => "str",

    // =================================================================
    // Inline
    // =================================================================

    _name: ($) => choice($.identifier),

    // =================================================================
    // Identifier
    // =================================================================

    // https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-IdentifierChars
    identifier: (_) => /[\p{XID_Start}_$][\p{XID_Continue}_$]*/u,

    // =================================================================
    // Util
    // =================================================================

    argument_list: ($) =>
      seq("(", sep(field("argument", $.expression), ","), ")"),

    _suite: ($) =>
      choice(
        alias($._simple_statement, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    reserved: (_) =>
      prec(
        -5,
        choice(
          "aligned",
          "as",
          "async",
          "break",
          "catch",
          "const",
          "continue",
          "data",
          "def",
          "do",
          "else",
          "entity",
          "enum",
          "error",
          "export",
          "extends",
          "extern",
          "for",
          "func",
          "hook",
          "if",
          "link",
          "lock",
          "mut",
          "parallel",
          "persistent",
          "requires",
          "return",
          "shared",
          "spawn",
          "switch",
          "sync",
          "test",
          "throw",
          "type",
          "use",
          "variant",
          "while",
        ),
      ),

    // =================================================================
    // Comments
    // =================================================================

    line_comment: (_) => token(seq("//", /[^\n]*/)),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
